Added API call for user data

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
-    "react-dom": "^15.3.2"
+    "react-dom": "^15.3.2",
+    "react-spinkit": "^1.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
