--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "react": "^15.3.2",
     "react-bootstrap": "^0.30.3",
     "react-dom": "^15.3.2",
-    "react-spinkit": "^1.1.11"
+    "react-redux": "^4.4.5",
+    "react-router": "^2.8.1",
+    "react-router-redux": "^4.0.6",
+    "react-spinkit": "^1.1.11",
+    "redux": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
