--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-router": "^2.8.1",
     "react-router-redux": "^4.0.6",
     "react-spinkit": "^1.1.11",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
